Final version of the homework

--- a/contact_us.html
+++ b/contact_us.html
@@ -47,7 +47,7 @@
                     <input class="contact-input contact-name required" type="text" name="first-name" id="first-name" placeholder="My name is" required>
                     <input class="contact-input contact-name required" type="text" name="last-name" id="last-name" placeholder="My lastname is" required>
                 </div>
-                <input class="contact-input required" type="text" name="e-mail" id="e-mail" placeholder="E-mail" required>
+                <input class="contact-input contact-email required" type="text" name="e-mail" id="e-mail" placeholder="E-mail" required>
                 <textarea class="contact-input-area contact-input required" type="text" name="about-you" id="about-you" placeholder="A little bit about me..." required></textarea>
             </fieldset>
             <fieldset class="language-form">
@@ -63,7 +63,7 @@
     <footer class="footer" id="footer">
         <div class="footer-content">
             <div class="footer-content-left">
-                <div>&copy; Expyra</div>
+                <div>&copy; Expatizen</div>
                 <div>Stockholm, Sweden, 2025</div>
             </div>
             <div class="footer-content-right">
