--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Expyra</title>
+    <title>Expatizen</title>
     <link rel="stylesheet" href="./styling/global.css">
     <link rel="stylesheet" href="./styling/typography.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
@@ -48,7 +48,7 @@
     <footer class="footer" id="footer">
         <div class="footer-content">
             <div class="footer-content-left">
-                <div>&copy; Expyra</div>
+                <div>&copy; Expatizen</div>
                 <div>Stockholm, Sweden, 2025</div>
             </div>
             <div class="footer-content-right">
@@ -67,7 +67,5 @@
             </div>
         </div>
     </footer>
-
-    <!-- test file -->
 </body>
 </html>
