--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
     <footer class="footer" id="footer">
         <div class="footer-content">
             <div class="footer-content-left">
-                <div>&copy; Expyra</div>
+                <div>&copy; Expatizen</div>
                 <div>Stockholm, Sweden, 2025</div>
             </div>
             <div class="footer-content-right">
