Final polish for the page

--- a/viagra_boys.html
+++ b/viagra_boys.html
@@ -30,7 +30,7 @@
             </form>
             <nav class="navigation-menu">
                 <ul class="navigation-menu-items">
-                    <li class="nav-menu-button home-button"><a href="/">Home</a></li>
+                    <li class="nav-menu-button home-button"><a href="index.html">Home</a></li>
                     <li class="nav-menu-button event-button"><a href="events.html" aria-current="page">Events</a></li>
                     <li class="nav-menu-button about-button"><a href="about.html">About</a></li>
                     <li class="nav-menu-button contact-button"><a href="contact_us.html">Contact</a></li>
@@ -41,7 +41,7 @@
     <main class="event-main-content">
         <section class="event-grid-container">
             <div class="event-image-container">
-                <img src="./eventImages/viagra_boys2.jpg" alt="Viagra Boys" height="300px" width="auto">
+                <img src="./eventImages/viagra_boys_event.jpg" alt="Viagra Boys" height="300px" width="auto">
             </div>
             <div class="event-header"><h1>VIAGRA BOYS</h1></div>
             <div class="event-description">
@@ -80,10 +80,10 @@
                     <img src="./logos/facebook_logo.png" alt="Faceboook logo" class="facebook-icon social-icon">
                 </a>
                 <a href="https://www.instagram.com" target="_blank" aria-label="Instagram">
-                    <img src="./logos/Instagram_Logo.png" alt="Instagram logo" class="social-icon">
+                    <img src="./logos/Instagram_logo.png" alt="Instagram logo" class="social-icon">
                 </a>
                 <a href="https://www.linkedin.com" target="_blank" aria-label="Linkedin">
-                    <img src="./logos/Linkedin_Logo.png" alt="Linkedin logo" class="social-icon">
+                    <img src="./logos/linkedin_logo.png" alt="Linkedin logo" class="social-icon">
                 </a>
             </div>
         </div>
