--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
             </form>
             <nav class="navigation-menu">
                 <ul class="navigation-menu-items">
-                    <li class="nav-menu-button home-button"><a href="/">Home</a></li>
+                    <li class="nav-menu-button home-button"><a href="index.html">Home</a></li>
                     <li class="nav-menu-button event-button"><a href="events.html">Events</a></li>
                     <li class="nav-menu-button about-button"><a href="about.html" aria-current="page">About</a></li>
                     <li class="nav-menu-button contact-button"><a href="contact_us.html">Contact</a></li>
