--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </form>
             <nav class="navigation-menu">
                 <ul class="navigation-menu-items">
-                    <li class="nav-menu-button home-button"><a href="/" aria-current="page">Home</a></li>
+                    <li class="nav-menu-button home-button"><a href="index.html" aria-current="page">Home</a></li>
                     <li class="nav-menu-button event-button"><a href="events.html">Events</a></li>
                     <li class="nav-menu-button about-button"><a href="about.html">About</a></li>
                     <li class="nav-menu-button contact-button"><a href="contact_us.html">Contact</a></li>
@@ -58,10 +58,10 @@
                             <img src="./logos/facebook_logo.png" alt="Faceboook logo" class="facebook-icon social-icon">
                         </a>
                         <a href="https://www.instagram.com" target="_blank" aria-label="Instagram">
-                            <img src="./logos/Instagram_Logo.png" alt="Instagram logo" class="social-icon">
+                            <img src="./logos/instagram_logo.png" alt="Instagram logo" class="social-icon">
                         </a>
                         <a href="https://www.linkedin.com" target="_blank" aria-label="Linkedin">
-                            <img src="./logos/Linkedin_Logo.png" alt="Linkedin logo" class="social-icon">
+                            <img src="./logos/linkedin_logo.png" alt="Linkedin logo" class="social-icon">
                         </a>
                     </div>
             </div>
