--- a/jonah_kagen.html
+++ b/jonah_kagen.html
@@ -30,7 +30,7 @@
             </form>
             <nav class="navigation-menu">
                 <ul class="navigation-menu-items">
-                    <li class="nav-menu-button home-button"><a href="/">Home</a></li>
+                    <li class="nav-menu-button home-button"><a href="index.html">Home</a></li>
                     <li class="nav-menu-button event-button"><a href="events.html" aria-current="page">Events</a></li>
                     <li class="nav-menu-button about-button"><a href="about.html">About</a></li>
                     <li class="nav-menu-button contact-button"><a href="contact_us.html">Contact</a></li>
@@ -41,7 +41,7 @@
     <main class="event-main-content">
         <section class="event-grid-container">
             <div class="event-image-container">
-                <img src="./eventImages/jonah_kagen2.jpg" alt="Jonah Kagen" height="300px" width="auto">
+                <img src="./eventImages/jonah_kagen_event.jpg" alt="Jonah Kagen" height="300px" width="auto">
             </div>
             <div class="event-header"><h1>JONAH KAGEN</h1></div>
             <div class="event-description">
