fix event image issue

--- a/contact_us.html
+++ b/contact_us.html
@@ -73,10 +73,10 @@
                         <img src="./logos/facebook_logo.png" alt="Faceboook logo" class="facebook-icon social-icon">
                     </a>
                     <a href="https://www.instagram.com" target="_blank" aria-label="Instagram">
-                        <img src="./logos/Instagram_Logo.png" alt="Instagram logo" class="social-icon">
+                        <img src="./logos/instagram_logo.png" alt="Instagram logo" class="social-icon">
                     </a>
                     <a href="https://www.linkedin.com" target="_blank" aria-label="Linkedin">
-                        <img src="./logos/Linkedin_Logo.png" alt="Linkedin logo" class="social-icon">
+                        <img src="./logos/linkedin_logo.png" alt="Linkedin logo" class="social-icon">
                     </a>
                 </div>
             </div>
