--- a/electric_callboy.html
+++ b/electric_callboy.html
@@ -41,7 +41,7 @@
     <main class="event-main-content">
         <section class="event-grid-container">
             <div class="event-image-container">
-                <img src="./eventImages/electric_callboy2.jpg" alt="Electric Callboy" height="300px" width="auto">
+                <img src="./eventImages/electric_callboy_event.jpg" alt="Electric Callboy" height="300px" width="auto">
             </div>
             <div class="event-header"><h1>Electric Callboy</h1></div>
             <div class="event-description">
@@ -79,10 +79,10 @@
                     <img src="./logos/facebook_logo.png" alt="Faceboook logo" class="facebook-icon social-icon">
                 </a>
                 <a href="https://www.instagram.com" target="_blank" aria-label="Instagram">
-                    <img src="./logos/Instagram_Logo.png" alt="Instagram logo" class="social-icon">
+                    <img src="./logos/instagram_logo.png" alt="Instagram logo" class="social-icon">
                 </a>
                 <a href="https://www.linkedin.com" target="_blank" aria-label="Linkedin">
-                    <img src="./logos/Linkedin_Logo.png" alt="Linkedin logo" class="social-icon">
+                    <img src="./logos/linkedin_logo.png" alt="Linkedin logo" class="social-icon">
                 </a>
             </div>
         </div>
