fix action buttons

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="header">
         <div class="header-content">
             <div class="header-site-logo">
-                <a href="/"><img class="site-logo" src="./logos/capybara_logo.png"></a>
+                <a href="index.html"><img class="site-logo" src="./logos/capybara_logo.png"></a>
             </div>
             <form class="search-form">
                 <input class="search-box" type="text" placeholder="Search here...">
