--- a/jonah_kagen.html
+++ b/jonah_kagen.html
@@ -16,7 +16,7 @@
     <header class="header">
         <div class="header-content">
             <div class="header-site-logo">
-                <a href="/"><img class="site-logo" src="./logos/capybara_logo.png"></a>
+                <a href="index.html"><img class="site-logo" src="./logos/capybara_logo.png"></a>
             </div>
             <form class="search-form">
                 <input class="search-box" type="text" placeholder="Search here...">
@@ -63,7 +63,7 @@
             </div>
             <div class="read-more">
                 <a href="https://www.tickster.com/se/sv/events/1gnurgta710kjz9/2025-11-04/jonah-kagen-stockholm" class="tickets-button">Tickets</a>
-                <a href="https://www.jonahkagen.com/" class="tickets-button">Official Site</a>
+                <a href="https://www.jonahkagen.com/" class="site-button">Official Site</a>
             </div>
         </section>
     </main>
