--- a/roya.html
+++ b/roya.html
@@ -16,7 +16,7 @@
     <header class="header">
         <div class="header-content">
             <div class="header-site-logo">
-                <a href="/"><img class="site-logo" src="./logos/capybara_logo.png"></a>
+                <a href="index.html"><img class="site-logo" src="./logos/capybara_logo.png"></a>
             </div>
             <form class="search-form">
                 <input class="search-box" type="text" placeholder="Search here...">
@@ -62,7 +62,7 @@
                 <p>245 SEK</p>
             </div>
             <div class="read-more">
-                <a href="https://secure.tickster.com/sv/ecay7prx3l0jvg8/products">Tickets</a>
+                <a href="https://secure.tickster.com/sv/ecay7prx3l0jvg8/products" class="tickets-button">Tickets</a>
                 <a href="https://ohmyroya.com/" class="site-button">Official Site</a>
             </div>
         </section>
