--- a/viagra_boys.html
+++ b/viagra_boys.html
@@ -16,7 +16,7 @@
     <header class="header">
         <div class="header-content">
             <div class="header-site-logo">
-                <a href="/"><img class="site-logo" src="./logos/capybara_logo.png"></a>
+                <a href="index.html"><img class="site-logo" src="./logos/capybara_logo.png"></a>
             </div>
             <form class="search-form">
                 <input class="search-box" type="text" placeholder="Search here...">
@@ -63,7 +63,7 @@
                 <p>350 &hyphen; 650 SEK</p>
             </div>
             <div class="read-more">
-                <a href="https://www.axs.com/se/events/842968/viagra-boys-tickets?skin=aviciiarena" class="site-button">Tickets</a>
+                <a href="https://www.axs.com/se/events/842968/viagra-boys-tickets?skin=aviciiarena" class="tickets-button">Tickets</a>
                 <a href="https://www.vboysstockholm.com/" class="site-button">Official Site</a>
             </div>
         </section>
