--- a/benson_boone.html
+++ b/benson_boone.html
@@ -16,7 +16,7 @@
     <header class="header">
         <div class="header-content">
             <div class="header-site-logo">
-                <a href="/"><img class="site-logo" src="./logos/capybara_logo.png"></a>
+                <a href="index.html"><img class="site-logo" src="./logos/capybara_logo.png"></a>
             </div>
             <form class="search-form">
                 <input class="search-box" type="text" placeholder="Search here...">
@@ -62,7 +62,7 @@
                 <p>795 &hyphen; 3750 SEK</p>
             </div>
             <div class="read-more">
-                <a href="https://www.axs.com/se/events/962063/benson-boone-tickets">Tickets</a>
+                <a href="https://www.axs.com/se/events/962063/benson-boone-tickets" class="tickets-button">Tickets</a>
                 <a href="https://www.bensonboone.com/" class="site-button">Official Site</a>
             </div>
         </section>
