--- a/electric_callboy.html
+++ b/electric_callboy.html
@@ -16,7 +16,7 @@
     <header class="header">
         <div class="header-content">
             <div class="header-site-logo">
-                <a href="/"><img class="site-logo" src="./logos/capybara_logo.png"></a>
+                <a href="index.html"><img class="site-logo" src="./logos/capybara_logo.png"></a>
             </div>
             <form class="search-form">
                 <input class="search-box" type="text" placeholder="Search here...">
@@ -62,8 +62,8 @@
                 <p>765 &hyphen; 820 SEK</p>
             </div>
             <div class="read-more">
-                <a href="https://www.axs.com/se/events/754615/electric-callboy-tickets?skin=fkpscorpiose">Tickets</a>
-                <a href="https://www.electriccallboy.com/" class="site-button">Official Site</a>
+                <a href="https://www.axs.com/se/events/754615/electric-callboy-tickets?skin=fkpscorpiose" class="tickets-button">Tickets</a>
+                <a href="https://www.electriccallboy.com/" class="tickets-button" class="site-button">Official Site</a>
             </div>
         </section>
     </main>
