--- a/roya.html
+++ b/roya.html
@@ -41,7 +41,7 @@
     <main class="event-main-content">
         <section class="event-grid-container">
             <div class="event-image-container">
-                <img src="./eventImages/roya2.jpg" alt="Roya" height="300px" width="auto">
+                <img src="./eventImages/roya_event.jpg" alt="Roya" height="300px" width="auto">
             </div>
             <div class="event-header"><h1>ROYA</h1></div>
             <div class="event-description">
